--- a/4_2_grid_system.html
+++ b/4_2_grid_system.html
@@ -143,7 +143,7 @@
       <hr />
     </header>
 
-    <div class="container">
+    <div class="container-fluid">
       <!--####################START HERE####################-->
 
       <!-- RESPONSIVE GRID -->
@@ -197,51 +197,79 @@
       </div>
 
       <!-- EQUAL WIDTH STACKED -->
-      <div>
-        <div style="border: 1px solid #333;">Equal Width Stack</div>
-        <div style="border: 1px solid #333;">Equal Width Stack</div>
-        <div style="border: 1px solid #333;">Equal Width Stack</div>
+      <div class="row">
+        <div class="col-sm" style="border: 1px solid #333;">
+          Equal Width Stack
+        </div>
+        <div class="col-sm" style="border: 1px solid #333;">
+          Equal Width Stack
+        </div>
+        <div class="col-sm" style="border: 1px solid #333;">
+          Equal Width Stack
+        </div>
       </div>
 
       <!-- ORDERING -->
-      <div>
-        <div style="border: 1px solid #333;">
-          First
+      <div class="row">
+        <div class="col order-3" style="border: 1px solid #333;">
+          OrderFirst
         </div>
-        <div style="border: 1px solid #333;">
+        <div class="col order-1" style="border: 1px solid #333;">
           Second
         </div>
-        <div style="border: 1px solid #333;">
+        <div class="col" style="border: 1px solid #333;">
           Third
         </div>
       </div>
 
       <!-- OFFSETTING -->
-      <div>
+      <div class="row">
         <!-- 6 column div offset by 3 -->
-        <div style="border: 1px solid #333;">.col-md-6 .offset-md-3</div>
+        <div class="col-md-6 offset-md-3" style="border: 1px solid #333;">
+          .col-md-6 .offset-md-3
+        </div>
       </div>
-      <div>
+      <div class="row">
         <!-- 2 4 column divs, the second offset by 4 -->
-        <div style="border: 1px solid #333;">.col-md-4</div>
-        <div style="border: 1px solid #333;">.col-md-4 .offset-md-4</div>
+        <div class="col-md-4 bg-success" style="border: 1px solid #333;">
+          .col-md-4
+        </div>
+        <div
+          class="col-md-4 offset-md-4 bg-info"
+          style="border: 1px solid #333;"
+        >
+          .col-md-4 .offset-md-4
+        </div>
       </div>
 
-      <div>
+      <div class="row">
         <!-- 2 3 column divs, both offset by 3 -->
-        <div style="border: 1px solid #333;">.col-md-3 .offset-md-3</div>
-        <div style="border: 1px solid #333;">.col-md-3 .offset-md-3</div>
+        <div
+          class="col-md-3 bg-warning offset-md-3"
+          style="border: 1px solid #333;"
+        >
+          .col-md-3 .offset-md-3
+        </div>
+        <div
+          class="col-md-3 bg-warning offset-md-3"
+          style="border: 1px solid #333;"
+        >
+          .col-md-3 .offset-md-3
+        </div>
       </div>
 
       <!-- NESTING -->
-      <div>
-        <div style="border: 1px solid blue;">
+      <div class="row">
+        <div class="col-sm-9" style="border: 1px solid blue;">
           Level 1: .col-sm-9
-          <div>
-            <div style="border: 1px solid red;">
+          <div class="row">
+            <div class="col-8 col-sm-6" style="border: 1px solid red;">
               Level 2: .col-8 .col-sm-6
             </div>
-            <div style="border: 1px solid red;">
+            <div
+              class="col-4 col-sm-6 bg-warning"
+              style="border: 1px solid red;"
+            >
               Level 2: .col-4 .col-sm-6
             </div>
           </div>
