--- a/4_4_flexbox.html
+++ b/4_4_flexbox.html
@@ -98,7 +98,7 @@
     <!--#####################START HERE######################-->
 
     <!-- FLEX ROW & FLEX ITEMS -->
-    <div class="row-hl">
+    <div class="d-flex flex-row row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -108,7 +108,7 @@
     <br>
 
     <!-- FLEX ROW REVERSE -->
-    <div class="row-hl">
+    <div class="d-flex flex-row-reverse row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -118,7 +118,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT START -->
-    <div class="row-hl">
+    <div class="d-flex justify-content-start row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -128,7 +128,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT CENTER -->
-    <div class="row-hl">
+    <div class="d-flex justify-content-center row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -138,7 +138,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT END -->
-    <div class="row-hl">
+    <div class="d-flex justify-content-end row-hl">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -148,7 +148,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT AROUND -->
-    <div class="row-hl">
+    <div class="bg-info d-flex justify-content-around">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -158,7 +158,7 @@
     <br>
 
     <!-- JUSTIFY CONTENT - CONTENT BETWEEN -->
-    <div class="row-hl">
+    <div class="bg-secondary d-flex justify-content-between">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -168,7 +168,7 @@
     <br>
 
     <!-- FLEX COLUMN -->
-    <div class="row-hl">
+    <div class="row-hl d-flex flex-column bg-secondary">
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
@@ -178,8 +178,8 @@
     <br>
 
     <!-- FLEX COLUMN REVERSE -->
-    <div class="row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+    <div class="d-flex flex-column-reverse active">
+      <div class="p-4 item-hl">Flex Item A</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -188,8 +188,14 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - START -->
-    <div class="row-hl">
+    <div class="d-flex align-items-start bg-warning">
+      <div class="p-4 item-hl">Flex Item start</div>
       <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">Flex Item start</div>
+      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">Flex Item</div>
+      <div class="p-4 item-hl">Flex Item start</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -198,8 +204,8 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - CENTER -->
-    <div class="row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+    <div class="row-hl d-flex align-items-center">
+      <div class="p-4 item-hl">Flex Item center</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -208,8 +214,8 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - END -->
-    <div class="row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+    <div class="d-flex align-items-end bg-warning">
+      <div class="p-4 item-hl">Flex Item T</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -218,8 +224,8 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - BASELINE -->
-    <div class="row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+    <div class="d-flex align-items-baseline row-hl">
+      <div class="p-4 item-hl">Flex Item baseline</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -228,8 +234,8 @@
     <br>
 
     <!-- VERTICAL ALIGN ITEMS - STRETCH -->
-    <div class="row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
+    <div class="row-hl d-flex align-items-stretch">
+      <div class="p-4 item-hl">Flex Item stretch</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
@@ -238,10 +244,10 @@
     <br>
 
     <!-- ALIGN SELF -->
-    <div class="row-hl">
-      <div class="p-4 item-hl">Flex Item</div>
-      <div class="p-4 item-hl">Flex Item</div>
-      <div class="p-4 item-hl">Flex Item</div>
+    <div class="row-hl d-flex">
+      <div class="p-4 item-hl align-self-start">Flex Item self on item</div>
+      <div class="p-4 item-hl align-self-center">Flex Item</div>
+      <div class="p-4 item-hl align-self-stretch">Flex Item stretch</div>
       <div class="p-4 item-hl">Flex Item</div>
       <div class="p-4 item-hl">Flex Item</div>
     </div>
