--- a/5_2_carousel.html
+++ b/5_2_carousel.html
@@ -175,10 +175,141 @@
           </div>
 
           <!-- SLIDER WITH CONTROLS -->
+          <div id="slider2" class="carousel slide mb-5" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/wgq4eit198Q/700x400"
+                  alt="First Slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/WLUHO9A_xik/700x400"
+                  alt="Second Slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/4yta6mU66dE/700x400"
+                  alt="Third Slide"
+                />
+              </div>
+            </div>
+            <!-- controls -->
+            <a
+              href="#slider2"
+              class="carousel-control-prev"
+              data-slide="prev"> <span class="carousel-control-prev-icon"</span>
+            </a>
+            <a
+            href="#slider2"
+            class="carousel-control-next"
+            data-slide="next"> <span class="carousel-control-next-icon"</span>
+            </a>
+          </div>
 
           <!-- SLIDER WITH INDICATORS -->
+          <div id="slider3" class="carousel slide mb-5" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li class="active" data-target="#slider3" data-slide-to="0"></li>
+              <li class="active" data-target="#slider3" data-slide-to="1"></li>
+              <li class="active" data-target="#slider3" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/wgq4eit198Q/700x400"
+                  alt="First Slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/WLUHO9A_xik/700x400"
+                  alt="Second Slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/4yta6mU66dE/700x400"
+                  alt="Third Slide"
+                />
+              </div>
+            </div>
+            <!-- controls -->
+            <a
+              href="#slider3"
+              class="carousel-control-prev"
+              data-slide="prev"> <span class="carousel-control-prev-icon"</span>
+            </a>
+            <a
+            href="#slider3"
+            class="carousel-control-next"
+            data-slide="next"> <span class="carousel-control-next-icon"</span>
+            </a>
+          </div>
 
           <!-- SLIDER WITH CAPTIONS -->
+          <div id="slider4" class="carousel slide mb-5" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li class="active" data-target="#slider4" data-slide-to="0"></li>
+              <li class="active" data-target="#slider4" data-slide-to="1"></li>
+              <li class="active" data-target="#slider4" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/wgq4eit198Q/700x400"
+                  alt="First Slide"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Slide One</h3>
+                  <p>describe slide one here</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/WLUHO9A_xik/700x400"
+                  alt="Second Slide"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Slide TWO</h3>
+                  <p>describe slide TWO here</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block img-fluid"
+                  src="https://source.unsplash.com/4yta6mU66dE/700x400"
+                  alt="Third Slide"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>Slide THREE</h3>
+                  <p>describe slide THREE here</p>
+                </div>
+              </div>
+            </div>
+            <!-- controls -->
+            <a
+              href="#slider4"
+              class="carousel-control-prev"
+              data-slide="prev"> <span class="carousel-control-prev-icon"</span>
+            </a>
+            <a
+            href="#slider4"
+            class="carousel-control-next"
+            data-slide="next"> <span class="carousel-control-next-icon"</span>
+            </a>
+          </div>
+
         </div>
       </div>
     </div>
