slight change to expand on one of the menus

--- a/3_3_navbar.html
+++ b/3_3_navbar.html
@@ -148,7 +148,7 @@
     <!-- SIMPLE NAVBAR -->
     <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">NavbarS</a>
         <ul class="navbar-nav">
           <li class="navbar-item">
             <a class="nav-link" href="#">Home</a>
@@ -169,7 +169,7 @@
     <!-- NAVBAR WITH RESPONSIVE TOGGLE -->
     <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">NavbarR</a>
         <button
           class="navbar-toggler"
           data-toggle="collapse"
@@ -197,9 +197,9 @@
     </nav>
 
     <!-- NAVBAR WITH FORM -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+    <nav class="navbar navbar-expand-md navbar-light bg-light mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">NavbarF</a>
         <button
           class="navbar-toggler"
           data-toggle="collapse"
@@ -264,7 +264,7 @@
     <!-- COLORS -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">NavbarC</a>
+        <a class="navbar-brand" href="#">NavbarC1</a>
         <ul class="navbar-nav">
           <li class="navbar-item">
             <a class="nav-link" href="#">Home</a>
@@ -284,7 +284,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">NavbarC</a>
+        <a class="navbar-brand" href="#">NavbarC2</a>
         <ul class="navbar-nav">
           <li class="navbar-item">
             <a class="nav-link" href="#">Home</a>
@@ -304,7 +304,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-success mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">NavbarC</a>
+        <a class="navbar-brand" href="#">NavbarC3</a>
         <ul class="navbar-nav">
           <li class="navbar-item">
             <a class="nav-link" href="#">Home</a>
@@ -436,7 +436,7 @@
       <!-- WITH DROPDOWNS -->
     </div>
     <!-- ./container -->
-    <div style="margin-top: 500px;"></div>
+    <div style="margin-top: 500px"></div>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
