--- a/3_3_navbar.html
+++ b/3_3_navbar.html
@@ -10,6 +10,32 @@
       integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
       crossorigin="anonymous"
     />
+    <!-- Load icon library -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script>
+      //called on flyto button click to locate the address or lat,lon in the textbox
+      // or to do radar or text google places search search
+      function flyTo() {
+        //not ready for prime time with a combo because you need to allow edit and updates
+        //var selectCtrl = document.getElementById("locationCombo");
+        //var address    = selectCtrl.options[selectCtrl.selectedIndex].value;
+        var address = document.getElementById("location").value;
+        alert(address);
+        geocoder.geocode({ address: address }, function (results, status) {
+          if (status === google.maps.GeocoderStatus.OK) {
+            map.setCenter(results[0].geometry.location);
+            map.setZoom(zoomValOnEvent);
+          } else {
+            alert(
+              "Geocode was not successful for the following reason: " + status
+            );
+          }
+        });
+      }
+    </script>
 
     <title>Bootstrap Sandbox</title>
   </head>
@@ -225,6 +251,46 @@
           <form class="form-inline ml-auto">
             <input type="text" class="form-control mr-2" placeholder="Search" />
             <button class="btn btn-outline-success">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <!-- NAVBAR WITH FORM Two -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-success mb-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">NavbarFF</a>
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarNavFF"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavFF">
+          <ul class="navbar-nav">
+            <li class="navbar-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="navbar-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+          <form class="form-inline ml-auto">
+            <input
+              id="location"
+              type="text"
+              class="form-control mr-2"
+              placeholder="Search"
+            />
+            <button class="btn" type="button" onclick="flyTo()">
+              <i class="btn fa fa-search"></i>
+            </button>
           </form>
         </div>
       </div>
