add nav brand image

--- a/mynavbar.html
+++ b/mynavbar.html
@@ -124,6 +124,10 @@
     <nav class="navbar navbar-dark bg-success" style="padding: 0;">
       <div class="container-fluid">
           <a class="navbar-brand" href="http://www.safeenv.com">
+            <img
+            src="http://seeicbrne.net/plumes/images/default.jpg"
+            alt="group" 
+            />
             <small class="text-warning"><cite title="Safe Environment Engineering Inc.">
               &copy;2010-<script>document.write(new Date().getFullYear())</script> Safeenv.com  v.3.x</cite></small>
           </a>
