--- a/mynavbar.html
+++ b/mynavbar.html
@@ -17,12 +17,11 @@
     />
 
     <style>
-      .checkboxes
-      {
-        margin-top: 2px;
-        margin-left: 2px;
-        margin-right: 2px;
-      }
+      /* Modify the background color */
+          
+      .navbar-custom {
+            background-color: #f0f0f0;
+        }
       .my-check-box 
       {
         margin-left: 18px;
@@ -152,7 +151,7 @@
     <!--##################START HERE###################-->
 
     <!-- NAVBAR WITH FORM and checkboxes  <span id="year"></span>  -->
-    <nav class="navbar navbar-dark bg-success" style="padding: 0;">
+    <nav class="navbar navbar-custom" style="padding: 0;">
       <div class="container-fluid">
           <a class="navbar-brand" href="http://www.safeenv.com" target="_blank">
             <!-- <img
