--- a/mynavbar.html
+++ b/mynavbar.html
@@ -153,20 +153,19 @@
     <!-- NAVBAR WITH FORM and checkboxes  <span id="year"></span>  -->
     <nav class="navbar navbar-custom" style="padding: 0;">
       <div class="container-fluid">
-          <a class="navbar-brand" href="http://www.safeenv.com" target="_blank">
+          <a class="navbar-brand mx-auto" href="#" target="_blank">
             <!-- <img
             src="http://seeicbrne.net/plumes/images/default.jpg"
             alt="group" 
             /> -->
-            <small class="text-warning"><cite title="Safe Environment Engineering Inc.">
-              &copy;2010-<script>document.write(new Date().getFullYear())</script> Safeenv.com  v.3.x</cite></small>
+            <small class="text-center text-dark">MultiMeterViewer</small>
           </a>
           <button
           class="navbar-toggler"
           data-toggle="collapse"
           data-target="#navbarNavF3"
           >
-          <span class="navbar-toggler-icon"></span>
+          <i class="fa fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavF3">
           <form class="form-control-sm ">
